--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/react": "7.0.26",
     "@storybook/react-vite": "7.0.26",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
