--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
+    "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
     "yup": "^1.2.0"
   },
