--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "class-variance-authority": "^0.6.1",
@@ -30,6 +31,7 @@
     "@storybook/react": "7.0.26",
     "@storybook/react-vite": "7.0.26",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@types/cypress": "^1.1.3",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
