--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.23",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
