--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
+    "framer-motion": "^10.12.21",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
