--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
@@ -40,6 +41,7 @@
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
