--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
+    "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
