--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.29.23",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
