--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.29.23",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
