--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-toast": "^1.1.4",
     "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.29.23",
     "argon2-wasm-esm": "^1.0.3",
