--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.29.23",
     "argon2-wasm-esm": "^1.0.3",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.21",
