--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-number-format": "^5.3.0",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
