--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
+    "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.2.0"
   },
@@ -52,6 +53,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-lazy-load-image-component": "^1.5.3",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
