--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.29.23",
     "argon2-wasm-esm": "^1.0.3",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "classnames": "^2.3.2",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
     "framer-motion": "^10.15.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-number-format": "^5.3.0",
