--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-markdown": "^8.0.7",
     "react-number-format": "^5.3.0",
     "react-router-dom": "^6.14.1",
     "swiper": "^10.0.4",
