--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.29.23",
+    "@types/node": "^20.5.7",
     "argon2-wasm-esm": "^1.0.3",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
@@ -68,7 +69,7 @@
     "prop-types": "15.8.1",
     "storybook": "7.0.26",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.4.0"
   }
 }
