--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
     "framer-motion": "^10.15.1",
+    "jwt-decode": "^3.1.2",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
