--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.3.2",
     "cloudinary-react": "^1.8.1",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.2",
     "framer-motion": "^10.15.1",
     "jwt-decode": "^3.1.2",
