--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-markdown": "^8.0.7",
     "react-number-format": "^5.3.0",
     "react-router-dom": "^6.14.1",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.13.2",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0",
