--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-markdown": "^8.0.7",
@@ -44,7 +45,8 @@
     "tailwind-merge": "^1.13.2",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.0.26",
